<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9"
    tools:context=".signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerLine2"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:layout_above="@id/centerLine2"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="#03115E"
            android:textSize="36sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/sign_up_to_continue"
            android:textAlignment="center"
            android:textColor="#0E2291"
            android:textSize="26sp">

        </TextView>
    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/centerLine2"
            android:layout_marginBottom="10dp"
            android:background="#f9f9f9"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/user_email2"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_id"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"

                >

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerLine2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#f9f9f9"
            android:id="@+id/user_password2"
            app:passwordToggleEnabled="true"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_password"
                android:hint="@string/password">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:layout_below="@id/user_password2"
        android:id="@+id/signup_button"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp" >

        </TextView>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_login_page"
        android:layout_below="@+id/signup_button"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#0E2291"
        android:id="@+id/goto_login">

    </TextView>

</RelativeLayout>