<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword"
    android:background="#f9f9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerLine3"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="120dp"
        android:layout_above="@id/centerLine3"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#03115E"
            android:textSize="36sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/enter_email_to_continue"
            android:textAlignment="center"
            android:textColor="#0E2291"
            android:textSize="26sp">

        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine3"
        android:layout_marginBottom="10dp"
        android:background="#f9f9f9"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/user_email">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registered_emil"
        android:hint="@string/enter_registered_email"
        android:inputType="textEmailAddress">

    </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:layout_below="@id/user_email"
        android:id="@+id/forgot_button"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_recover"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_marginLeft="8dp" >

        </TextView>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back_to_login_page"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/goto_login"
        android:textColor="#0E2291">
    </TextView>
</RelativeLayout>